--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -73,31 +73,31 @@
                 <div class="col">
                     <div class="aboutusbox pt-4 pb-1 rounded">
                         <img src="/image/aboutus/pavit.png" class="w-75 h-75 mx-auto d-block mb-3">
-                        <h1 class="fz-16 text-center">Pavit Lertpiromlak</h1>
+                        <h1 class="fz-16 text-center">Pavit Lertpiromlak 6588054</h1>
                     </div>
                 </div>
                 <div class="col">
                     <div class="aboutusbox pt-4 pb-1 rounded">
                         <img src="/image/aboutus/pavit.png" class="w-75 h-75 mx-auto d-block mb-3">
-                        <h1 class="fz-16 text-center">Kasama Kiatapakul</h1>
+                        <h1 class="fz-16 text-center">Kasama Kiatapakul 6588045</h1>
                     </div>
                 </div>
                 <div class="col">
                     <div class="aboutusbox pt-4 pb-1 rounded">
                         <img src="/image/aboutus/pavit.png" class="w-75 h-75 mx-auto d-block mb-3">
-                        <h1 class="fz-16 text-center">Muthita Pakdeemonthon</h1>
+                        <h1 class="fz-16 text-center">Muthita Pakdeemonthon 6588063</h1>
                     </div>
                 </div>
                 <div class="col">
                     <div class="aboutusbox pt-4 pb-1 rounded">
                         <img src="/image/aboutus/pavit.png" class="w-75 h-75 mx-auto d-block mb-3">
-                        <h1 class="fz-16 text-center">Nintawa Kenyota</h1>
+                        <h1 class="fz-16 text-center">Nintawa Kenyota 6588042</h1>
                     </div>
                 </div>
                 <div class="col">
                     <div class="aboutusbox pt-4 pb-1 rounded">
                         <img src="/image/aboutus/pavit.png" class="w-75 h-75 mx-auto d-block mb-3">
-                        <h1 class="fz-16 text-center">Chaiyakrit Pokawanit</h1>
+                        <h1 class="fz-16 text-center">Chaiyakrit Pokawanit 6588078</h1>
                     </div>
                 </div>
             </div>
